--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ capnp-rpc = "0.20.3"
 futures = "0.3.31"
 tokio = { version = "1.43.0", features=["full"] }
 tokio-util = {version = "0.7.13", features = ["compat"] }
+once_cell = "1"
 
 [build-dependencies]
 capnpc = "0.20.1"
